xxx.log
/usr/bin/gcc -o obj/run.o -c --std=c99 ./src/run.c 
./src/run.c:42:7: error: array type has incomplete element type
 uchar test_array[][] = {{0x44, 0x77},{0x66,0x71},{0x34, 0x27},{0x33,0x99},{0x63,0xD8}};
       ^
./src/run.c: In function ‘main’:
./src/run.c:401:6: warning: passing argument 2 of ‘random_input’ from incompatible pointer type [enabled by default]
      random_input(original_data, rnd3,fp_plaintext_txt, file_type, block_number, block_length);
      ^
In file included from ./src/run.c:16:0:
./src/../include/input.h:16:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void random_input(uchar **input, const uchar **rnd,FILE *data_i, bool file_type, int number, int arr_length);
      ^
./src/run.c:429:6: warning: passing argument 2 of ‘random_input’ from incompatible pointer type [enabled by default]
      random_input(original_data, rnd3,fp_plaintext_csv, file_type, block_number, block_length);
      ^
In file included from ./src/run.c:16:0:
./src/../include/input.h:16:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void random_input(uchar **input, const uchar **rnd,FILE *data_i, bool file_type, int number, int arr_length);
      ^
./src/run.c:459:6: warning: passing argument 2 of ‘only_plaintext’ from incompatible pointer type [enabled by default]
      only_plaintext(ciper_data, original_data, block_number,block_length, fp_cipher_txt,file_type);
      ^
In file included from ./src/run.c:21:0:
./src/../include/cipher.h:18:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void only_plaintext(uchar **dst, const uchar **src, int number, int arr_length, FILE *cipher_o,bool file_type);
      ^
./src/run.c:463:6: warning: passing argument 2 of ‘only_plaintext’ from incompatible pointer type [enabled by default]
      only_plaintext(ciper_data, original_data, block_number,block_length, fp_cipher_csv,file_type);
      ^
In file included from ./src/run.c:21:0:
./src/../include/cipher.h:18:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void only_plaintext(uchar **dst, const uchar **src, int number, int arr_length, FILE *cipher_o,bool file_type);
      ^
./src/run.c:496:16: warning: cast from pointer to integer of different size [-Wpointer-to-int-cast]
    uint addr = (uint) ciper_data;
                ^
./src/run.c:530:6: warning: passing argument 1 of ‘CETD_tag_generation’ from incompatible pointer type [enabled by default]
      DEC);
      ^
In file included from ./src/run.c:19:0:
./src/../include/CETD.h:24:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void CETD_tag_generation(const uchar **data,int block_num, 
      ^
./src/run.c:548:6: warning: passing argument 1 of ‘CETD_tag_generation’ from incompatible pointer type [enabled by default]
      DEC);
      ^
In file included from ./src/run.c:19:0:
./src/../include/CETD.h:24:6: note: expected ‘const unsigned char **’ but argument is of type ‘unsigned char **’
 void CETD_tag_generation(const uchar **data,int block_num, 
      ^
./src/run.c: In function ‘nonce_len’:
./src/run.c:678:2: warning: implicit declaration of function ‘shuffle_p’ [-Wimplicit-function-declaration]
  v= shuffle_p(y_num, tag_len); 
  ^
make: *** [obj/run.o] Error 1
